--- a/teaching_subject.html
+++ b/teaching_subject.html
@@ -24,13 +24,16 @@
                 </ul>
             </nav>
         </div>
+        <div class="logo">
+            <img src="images/ubb_logo_light.png" alt="CS Logo">
+        </div>
     </header>
     
     <main class="stretch-to-bottom">
         <section id="teaching-subject">
             <h2>Teaching Subjects</h2>
             
-            <button class="accordion-button">Click here to learn more about my teaching subjects</button>
+            <button class="accordion-button">Learn more about subjects</button>
             <div class="accordion-panel">
                 <section id="teaching-subject">
                     <ul class="fancy-list">
@@ -40,7 +43,21 @@
                             </div>
                             <div class="subject-details">
                                 <h3>Programming</h3>
-                                <p>In the Programming course, students learn the core concepts of coding, problem-solving, and algorithm development. They gain practical experience in writing code, debugging, and understanding different programming languages. This course equips students with the essential skills to become proficient programmers and tackle real-world coding challenges.</p>
+                                <p>In the Programming course, students learn the core concepts of coding, problem-solving, and algorithm development. </p>
+                                <div class="news-tiles">
+                                    <div class="news-tile">
+                                        <h4 class="red-headline">Exam Date</h4>
+                                        <p>The exam is scheduled for 25/01/2023. Online attendance mandatory.</p>
+                                    </div>
+                                    <div class="news-tile">
+                                        <h4 class="red-headline">MSTeams Code</h4>
+                                        <p>0DF8CD3</p>
+                                    </div>
+                                    <div class="news-tile">
+                                        <h4 class="red-headline">Week</h4>
+                                        <p>We are currently in week 12 of this semester.</p>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                         <li class="fancy-list-item">
@@ -49,7 +66,13 @@
                             </div>
                             <div class="subject-details">
                                 <h3>Microservices Architectures</h3>
-                                <p> In the Microservices Architectures course, students delve into the principles and best practices of designing, building, and managing microservices-based applications. They learn how to decompose monolithic systems, implement microservices using various technologies, and address challenges such as communication between services and data management. This course prepares students for the evolving landscape of software architecture.</p>
+                                <p>In the Microservices Architectures course, students delve into the principles and best practices of designing, building, and managing microservices-based applications. </p>
+                                <div class="news-tiles">
+                                    <div class="news-tile">
+                                        <h4 class="red-headline">MSTeams Code</h4>
+                                        <p>049FJE0F</p>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                         <li class="fancy-list-item">
@@ -58,8 +81,17 @@
                             </div>
                             <div class="subject-details">
                                 <h3>Cloud Fundamentals</h3>
-                                <p>In the Cloud Fundamentals course, students explore the core concepts of cloud computing, including Infrastructure as a Service (IaaS), Platform as a Service (PaaS), and Software as a Service (SaaS). They gain hands-on experience with popular cloud platforms like Amazon Web Services (AWS), Microsoft Azure, or Google Cloud Platform (GCP). Students learn how to deploy applications, manage cloud resources, and leverage cloud services to meet business needs. This course equips them with valuable skills for the modern IT landscape.
-                                </p>
+                                <p>In the Cloud Fundamentals course, students explore the core concepts of cloud computing, including Infrastructure as a Service (IaaS), Platform as a Service (PaaS), and Software as a Service (SaaS). </p>
+                                <div class="news-tiles">
+                                    <div class="news-tile">
+                                        <h4 class="red-headline">MSTeams Code</h4>
+                                        <p>9DNVE8S</p>
+                                    </div>
+                                    <div class="news-tile">
+                                        <h4 class="red-headline">Projects</h4>
+                                        <p>Deadlines can be found in Teams -> ASSIGNMENTS Section of the course</p>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                     </ul>
@@ -75,7 +107,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 My Personal Website</p>
+        <p>&copy; 2024 Prof. V. Frunzescu</p>
         <div class="social-icons">
             <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
