--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,6 @@
             <iframe
               src="https://calendar.google.com/calendar/embed?src=en.romanian%23holiday%40group.v.calendar.google.com&ctz=Europe%2FZurich"
               style="border: 0"
-              frameborder="0"
-              scrolling="no"
             ></iframe>
           </div>
           
@@ -79,10 +77,10 @@
     <footer>
         <p>&copy; 2024 Prof. V. Frunzescu</p>
         <div class="social-icons">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://linkedin.com" target="_blank" aria-label="linkedin link"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com" target="_blank" aria-label="twitter link"><i class="fab fa-twitter"></i></a>
+            <a href="https://facebook.com" target="_blank" aria-label="facebook link"><i class="fab fa-facebook"></i></a>
+            <a href="https://youtube.com" target="_blank" aria-label="youtube link"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
 >
