--- a/personal_info.html
+++ b/personal_info.html
@@ -38,11 +38,8 @@
             <h3>Hobbies</h3>
             <ul class="fancy-list">
                 <li><i class="fas fa-guitar"></i> Playing the guitar is my creative outlet, where melodies and chords come together to bring joy and harmony to my life.</li>
-                <br>
                 <li><i class="fas fa-paint-brush"></i> The world of paintings captivates me with its diverse colors and expressions, and I enjoy creating and admiring art in various forms.</li>
-                <br>
                 <li><i class="fas fa-coffee"></i> Sipping on a cup of freshly brewed coffee is my daily ritual, providing both comfort and inspiration to start the day.</li>
-                <br>
                 <li><i class="fas fa-hiking"></i> Hiking allows me to connect with nature, explore new trails, and find peace amidst the beauty of the great outdoors.</li>
             </ul>
         </section>
@@ -58,18 +55,16 @@
     </div>
 </section>
 
-</section>
-
         </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Prof. V. Frunzescu</p>
         <div class="social-icons">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://linkedin.com" target="_blank" aria-label="linkedin link"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com" target="_blank" aria-label="twitter link"><i class="fab fa-twitter"></i></a>
+            <a href="https://facebook.com" target="_blank" aria-label="facebook link"><i class="fab fa-facebook"></i></a>
+            <a href="https://youtube.com" target="_blank" aria-label="youtube link"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
     
