--- a/teaching_subject.html
+++ b/teaching_subject.html
@@ -30,7 +30,7 @@
     </header>
     
     <main class="stretch-to-bottom">
-        <section id="teaching-subject">
+        <section id="teaching-subjects">
             <h2>Teaching Subjects</h2>
             
             <button class="accordion-button">Learn more about subjects</button>
@@ -109,10 +109,10 @@
     <footer>
         <p>&copy; 2024 Prof. V. Frunzescu</p>
         <div class="social-icons">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://linkedin.com" target="_blank" aria-label="linkedin link"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com" target="_blank" aria-label="twitter link"><i class="fab fa-twitter"></i></a>
+            <a href="https://facebook.com" target="_blank" aria-label="facebook link"><i class="fab fa-facebook"></i></a>
+            <a href="https://youtube.com" target="_blank" aria-label="youtube link"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
 
